Bugfix: fix sizing of profile and logout button to take the whole width of the dropdown, show homepage tooltips on the bottom so that they are still visible when toolbar is sticky

--- a/style/main.scss
+++ b/style/main.scss
@@ -1439,6 +1439,16 @@
   .sticky {
     position: sticky;
   }
+  .tooltip-bottom {
+    > .tooltip-content, &[data-tip]:before {
+      transform: translateX(-50%) translateY(var(--tt-pos, -0.25rem));
+      inset: var(--tt-off) auto auto 50%;
+    }
+    &:after {
+      transform: translateX(-50%) translateY(var(--tt-pos, -0.25rem)) rotate(180deg);
+      inset: var(--tt-tail) auto auto 50%;
+    }
+  }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
@@ -2080,6 +2090,9 @@
         --join-ee: var(--radius-field);
       }
     }
+  }
+  .block {
+    display: block;
   }
   .contents {
     display: contents;
